compiler/tests/should-fail/NoHostDeclarations.via
/* NoHostDeclarationsError */

process main {
    val result: int = 42;
}
